--- a/shims/apachevanilla/pmr/pom.xml
+++ b/shims/apachevanilla/pmr/pom.xml
@@ -14,7 +14,7 @@
   <packaging>pom</packaging>
 
   <properties>
-    <org.apache.hbase.version>2.2.3.7.1.3.0-100</org.apache.hbase.version>
+    <org.apache.hbase.version>2.6.2</org.apache.hbase.version>
   </properties>
   <dependencies>
     <dependency>
@@ -58,6 +58,10 @@
         <exclusion>
           <groupId>com.nimbusds</groupId>
           <artifactId>nimbus-jose-jwt</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>com.google.protobuf</groupId>
+          <artifactId>protobuf-java</artifactId>
         </exclusion>
       </exclusions>
     </dependency>
